# Fake-News-Detection-System

./: .gitignore  LICENSE  README.md  pyproject.toml  supabase_schema.sql  vercel.json
api/: index.py
backend/: .env.example  debug_cols.py  debug_otp.py  main.py  requirements.txt  test_passlib.py  test_pbkdf2.py  test_register.py
backend/agents/: claim_extractor.py  fact_check.py  gemini_verifier.py  news_search.py  nlp_signals.py  pipeline.py  response_builder.py  wikipedia_agent.py
backend/auth/: routes.py  utils.py
backend/database/: connection.py  crud.py  models.py
backend/utils/: email_service.py  logger.py
frontend/: index.html
frontend/components/: modals.html  nav.html
frontend/css/: analyzer.css  common.css  landing.css  profile.css
frontend/js/: analyzer.js  auth.js  config.js  history.js  main.js  navigation.js  utils.js
frontend/pages/: analyzer.html  history.html  home.html  profile.html
